--- a/combinatori/combinatori.tex
+++ b/combinatori/combinatori.tex
@@ -36,7 +36,7 @@
 
         \begin{align*}
             \mathrm{I} &\coloneqq \mathrm{S} \, \mathrm{K} \, \mathrm{K}\\
-            \mathrm{Y} &\coloneqq \mathrm{S} \, (\mathrm{K} \, (\mathrm{S} \, \mathrm{I} \, \mathrm{I})) (\mathrm{S} \, (\mathrm{S} \, (\mathrm{K} \, \mathrm{S}) \, \mathrm{K}) \, (\mathrm{K} \, (\mathrm{S} \, \mathrm{I} \, \mathrm{I})))
+            \mathrm{Y} &\coloneqq \mathrm{S} \, (\mathrm{K} \, (\mathrm{S} \, \mathrm{I} \, \mathrm{I})) \, (\mathrm{S} \, (\mathrm{S} \, (\mathrm{K} \, \mathrm{S}) \, \mathrm{K}) \, (\mathrm{K} \, (\mathrm{S} \, \mathrm{I} \, \mathrm{I})))
         \end{align*}
 
 \end{document}
